--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,8 @@ padding:1vmin;
   border-right: 20px solid rgba(255, 255, 255, 0.49);
   border-left: 20px solid rgba(255, 255, 255, 0);
   display:inline;
+  position: relative;
+  top:-10px;
 }
 .decreaseBtn:hover{
   border-right: 20px solid rgba(255, 255, 255, 0.80);
@@ -46,6 +48,8 @@ padding:1vmin;
   border-right: 20px solid rgba(255, 255, 255, 0);
   border-left: 20px solid rgba(255, 255, 255, 0.49);
   display:inline;
+  position: relative;
+  top:-10px;
 }
 .increaseBtn:hover{
   border-left: 20px solid rgba(255, 255, 255, 0.80);
