--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@ body {
   background-color: #2BC8FF;
   font-family: 'Roboto', sans-serif;
   color: #FFF;
+  margin:0;
+}
+#outermost{
+height:100vh;
+width:100%;
+box-sizing: border-box;
+padding:8px;
 }
 button{
 cursor:pointer;
@@ -77,10 +84,9 @@ padding:1vmin;
 }
 
 #powCircle img {
-  width: 50vmin;
-  height: auto;
-  margin-left: 10vmin;
-  margin-right: 10vmin;
+  width: auto;
+  height: 30vmin;
+  margin:auto;
 }
 
 h1 {
@@ -108,13 +114,13 @@ h2 {
 #restartBtn {
   width: 20vmin;
   height: 20vmin;
-  background: #FFF;
+  background: rgba(0,0,0,0);
   border-radius: 50%;
   position: absolute;
   top: 75vh;
   left: 70vw;
   border: none;
-  background: url(pictures/resetBreak.svg);
+  background-image: url(pictures/reset.svg);
   background-size: contain;
   box-shadow: 0.5vmin 0.5vmin 0.5vmin rgba(0, 0, 0, 0.1);
 }
